add --enable-native-access warning and a little terminal test mainline